[gd_scene load_steps=6 format=3 uid="uid://b31sj5xn60css"]

[ext_resource type="Theme" uid="uid://bqyp1aqk6xbiy" path="res://main_theme.tres" id="1_on5ay"]
[ext_resource type="Script" path="res://scenes/card_ui.gd" id="2_voj2p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdcw6"]
size = Vector2(90, 160)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ndnt"]
bg_color = Color(0.666569, 0.666569, 0.666569, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_n1xkv"]

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(96, 170)
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -444.0
offset_bottom = -790.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_on5ay")
script = ExtResource("2_voj2p")

[node name="Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.429734, 0.85816, 0.714084, 1)

[node name="CardText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_on5ay")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(48, 85)
shape = SubResource("RectangleShape2D_rdcw6")
passby_press = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 148.0
offset_right = 81.0
offset_bottom = 170.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7ndnt")

[node name="NeighborColor" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -20.0
offset_right = 31.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_n1xkv")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
